# offboard_drone

./: .gitignore  CMakeLists.txt  DefineList.h  README.md  package.xml
config/: default.yaml  sitl_default.yaml  sitl_vpGain.yaml
include/px4drone/: px4drone.hpp
launch/: offboard.launch  offboard_sitl_default.launch  offboard_sitl_vpGain.launch  offboard_uav1.launch  offboard_uav21_gazebo.launch  velocity_cmd_test.launch
src/: SubtUtil.h  SubtUtil_uav1.h  SubtUtil_uav21.h  monitor_offboard.cpp  offboard_node.cpp  offboard_node_uav1.cpp  offboard_node_uav21.cpp  offboard_node_uav21_gazebo.cpp  px4drone.cpp  velocity_cmd_test_node.cpp
