<?xml version="1.0"?>
<package>
  <name>offboard_drone</name>
  <version>0.1.0</version>
  <description>px4drone offboard code</description>
  <maintainer email="inhwan.wee@nearthlab.com">Inhwan Wee</maintainer>

  <license>BSD</license>

  <url type="website">https://www.nearthlab.com/</url>
  <author email="inhwan.wee@nearthlab.com">Inhwan Wee</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>
  </export>
</package>

